--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -6,12 +6,12 @@
       <div class="big-image-slider-inner">
         <div class="big-image-item">
           <div class="big-image-item-inner">
-            <img src="/img/roadmap/info1.jpg" alt="">
+            <img src="/img/roadmap/info1.jpg" alt=""/>
           </div>
         </div>
         <div class="big-image-item">
           <div class="big-image-item-inner">
-            <img src="/img/roadmap/info2.jpg" alt="">
+            <img src="/img/roadmap/info2.jpg" alt=""/>
           </div>
         </div>
       </div>
