--- a/src/pug/2-2usl.pug
+++ b/src/pug/2-2usl.pug
@@ -36,8 +36,14 @@ block content
 														.offer-item-head-left
 															.offer-item-price 
 																span 95 000
+																	i
+																		svg(class="icon icon-drop")
+																			use(xlink:href="#rub" xmlns:xlink="http://www.w3.org/1999/xlink")
 															.offer-item-price.small
 																span 105 000
+																	i
+																		svg(class="icon icon-drop")
+																			use(xlink:href="#rub" xmlns:xlink="http://www.w3.org/1999/xlink")
 														.offer-item-head-right
 															.news-type.sale
 																span Акция
@@ -50,6 +56,9 @@ block content
 														.offer-item-head-left
 															.offer-item-price 
 																span 2 100
+																	i
+																		svg(class="icon icon-drop")
+																			use(xlink:href="#rub" xmlns:xlink="http://www.w3.org/1999/xlink")
 														.offer-item-head-right
 													.offer-item-content
 														.text Первичный приём врача–кардиолога
@@ -59,6 +68,9 @@ block content
 														.offer-item-head-left
 															.offer-item-price 
 																span 2 100
+																	i
+																		svg(class="icon icon-drop")
+																			use(xlink:href="#rub" xmlns:xlink="http://www.w3.org/1999/xlink")
 														.offer-item-head-right
 													.offer-item-content
 														.text Первичный приём врача–кардиолога
@@ -68,6 +80,9 @@ block content
 														.offer-item-head-left
 															.offer-item-price 
 																span 2 100
+																	i
+																		svg(class="icon icon-drop")
+																			use(xlink:href="#rub" xmlns:xlink="http://www.w3.org/1999/xlink")
 														.offer-item-head-right
 													.offer-item-content
 														.text Первичный приём врача–кардиолога
