--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -195,7 +195,7 @@ body, .out
         display: inline-block
         position: absolute
         right: 0
-        +rem(top,10px)
+        top: 0
         // bottom: 0
         +rem(height,50px)
         +rem(width,50px)
@@ -1270,7 +1270,7 @@ body, .out
                     width: 100%
                     min-width: 100%
             .footer-right
-                padding-top: 0 !important
+                +rem(padding-top, 20px)
                 +rm(601)
                     order: 1
                 +r(600)
@@ -1501,6 +1501,12 @@ body, .out
                 object-position: right center
                 height: 100%
                 width: 100%
+                +ie11
+                    height: 100%
+                    margin: 0 auto
+                    width: auto !important
+                    display: block
+                    right: 0
                 +r(600)
                     bottom: 0
                     right: 0
@@ -1557,10 +1563,12 @@ body, .out
             vertical-align: middle
             +rem(width,47px)
             +rem(height,47px)
+            text-align-last: center !important
             .icon
                 display: inline-block
                 width: 100%
                 height: 100%
+                // text-align: center !important
                 +vertical
                 border-radius: 50%
                 background-color: color(white)
@@ -1748,6 +1756,9 @@ body, .out
                         transition-delay: .25s, .25s, 0s
                     &:nth-child(5)
                         transition-delay: .15s, .15s, 0s
+        &-wrap 
+            display: block
+            height: 100%
 
     &-vrach
         position: absolute
@@ -1909,6 +1920,7 @@ body, .out
         z-index: 2
         .search-submit
             +rem(right,10px)
+            // +rem(top,10px)
         &.focus
             .suggest-wrapper-inner
                 box-shadow: 0px 5px 22px 0px rgba(68, 97, 119, 0.12);
@@ -2255,6 +2267,8 @@ body, .out
                 margin-right: auto
                 height: 100%
                 width: auto
+                +ie11
+                    right: auto
                 +r(600)
                     height: 60%
                     margin-top: auto
@@ -3114,14 +3128,16 @@ hr
             display: none
     .vrach-wrap
         +r(600)
-            padding-right: 0
+            +rem(padding-right,10px)
     .otdel-head-title
-        +rem(width,400px)
+        +rem(max-width,400px)
+        width: 100%
         +rem(padding-bottom,25px)
         +r(600)
             +rem(padding-bottom,0)
-            .title
-                display: block
+            +justify
+            // .title
+            //     display: block
             .arr-wrap-inner
                 padding-left: 0
                 
@@ -3735,6 +3751,8 @@ a.text
             margin-bottom: 0
             +r(800)
                 +rem(margin-bottom,20px)
+        .search-submit
+            +rem(top,10px)
         +r(800)
             width: 100%
             .input-item
@@ -3743,6 +3761,7 @@ a.text
                 +rem(margin-left,-10px)
                 +rem(margin-right,-10px)
                 z-index: 0
+
     &-head
         font-size: 0
         +rem(margin-right,-30px)
@@ -4121,12 +4140,16 @@ a.text
         overflow: visible
         +r(1300)
             padding-bottom: 40%
+        +r(600)
+           padding-bottom: 70% 
     &-img
         position: absolute
         right: 0
         top: -10%
         width: 36.5%
         z-index: 2
+        +r(600)
+            width: 25.5%     
         &-inner
             position: relative
             z-index: 1
