--- a/bitrix/templates/main/diplom2.html
+++ b/bitrix/templates/main/diplom2.html
@@ -1,28 +1,19 @@
 
 <div class="wrap">
-  <div class="modal-container">
-    <i class="small-link pop-close closePopup"></i>
+  <div class="modal-container"><i class="small-link pop-close closePopup"></i>
     <div class="big-image-slider">
       <div class="big-image-slider-inner">
         <div class="big-image-item">
-          <div class="big-image-item-inner">
-            <img src="/img/big.png" alt=""/>
-          </div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner">
-            <img src="/img/index/1.jpg" alt=""/>
-          </div>
+          <div class="big-image-item-inner"><img src="/img/index/1.jpg" alt=""/></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner">
-            <img src="/img/big.png" alt=""/>
-          </div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
         </div>
         <div class="big-image-item">
-          <div class="big-image-item-inner">
-            <img src="/img/big.png" alt=""/>
-          </div>
+          <div class="big-image-item-inner"><img src="/img/big.png" alt=""/></div>
         </div>
       </div>
     </div>
@@ -43,8 +34,7 @@
           <div class="modal-container-slider-item">
             <div class="title h3">Лицензия</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц 0</div>
-            <div class="slide-links">
-              <a class="download-link" href="#">
+            <div class="slide-links"><a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -61,15 +51,12 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать PDF</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div>
-              </a>
-            </div>
+                </div></a></div>
           </div>
           <div class="modal-container-slider-item">
             <div class="title h3">Лицензия</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц 11</div>
-            <div class="slide-links">
-              <a class="download-link" href="#">
+            <div class="slide-links"><a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -86,15 +73,12 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать PDF</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div>
-              </a>
-            </div>
+                </div></a></div>
           </div>
           <div class="modal-container-slider-item">
             <div class="title h3">Свидетельство</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц 22</div>
-            <div class="slide-links">
-              <a class="download-link" href="#">
+            <div class="slide-links"><a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -111,15 +95,12 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать PDF</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div>
-              </a>
-            </div>
+                </div></a></div>
           </div>
           <div class="modal-container-slider-item">
             <div class="title h3">Свидетельство</div>
             <div class="text">Свидетельство о внесении записи в Единый государственный реестр юридических лиц 33</div>
-            <div class="slide-links">
-              <a class="download-link" href="#">
+            <div class="slide-links"><a class="download-link" href="#">
                 <div class="download-link-icon">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="25px" viewbox="0 0 23 31.8" style="enable-background:new 0 0 23 31.8;" xml:space="preserve">
                     <style type="text/css">
@@ -136,9 +117,7 @@
                 <div class="download-link-text">
                   <div class="text primary">Скачать PDF</div>
                   <div class="text">PDF, 675 Кб</div>
-                </div>
-              </a>
-            </div>
+                </div></a></div>
           </div>
         </div>
       </div>
