--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -151,6 +151,9 @@ include _mixins.pug
 								a(href="#").text.blk Новости
 							li 
 								a(href="#").text.blk Акции
+							// просто добавленная ссылка
+							li 
+								a(href="#").text.blk О клинике
 							li 
 								a(href="#").text.blk Контакты
 					.footer-links-add
