--- a/bitrix/templates/main/zagl.html
+++ b/bitrix/templates/main/zagl.html
@@ -52,42 +52,18 @@
     <div class="main-wrapper">
       <div class="main-wrapper-content">
         <div class="main-wrapper-content-inner">
-          <div class="main-wrapper-logo">
-            <a href="#">
-              <img src="img/zagl/logo.png" alt="">
-            </a>
-          </div>
+          <div class="main-wrapper-logo"><a href="#"><img src="img/zagl/logo.png" alt=""></a></div>
           <div class="main-wrapper-text">
             <h1 class="title h2">К сожалению ваш браузер устарел</h1>
             <div class="text">Мы рады приветствовать вас на сайте «Моситалмед»! К сожалению, ваш браузер устарел и не может отобразить наш сайт корректно.</div>
             <div class="text">Пожалуйста, обновите свой браузер:</div>
           </div>
-          <div class="main-wrapper-links">
-                        <a class="main-wrapper-item" href="https://www.google.com/chrome/browser/desktop/">
-                          <div class="img-wrapp">
-                            <img src="img/zagl/Chrome.png" alt="">
-                          </div>
-                        </a>
-                        <a class="main-wrapper-item" href="http://www.mozilla.org/firefox/new/">
-                          <div class="img-wrapp">
-                            <img src="img/zagl/FF.png" alt="">
-                          </div>
-                        </a>
-                        <a class="main-wrapper-item" href="http://windows.microsoft.com/ie">
-                          <div class="img-wrapp">
-                            <img src="img/zagl/IE.png" alt="">
-                          </div>
-                        </a>
-                        <a class="main-wrapper-item" href="http://www.apple.com/osx/">
-                          <div class="img-wrapp">
-                            <img src="img/zagl/Opera.png" alt="">
-                          </div>
-                        </a>
-                        <a class="main-wrapper-item" href="http://www.opera.com/ru">
-                          <div class="img-wrapp">
-                            <img src="img/zagl/Safari.png" alt="">
-                          </div>
-                        </a>
+          <div class="main-wrapper-links"><a class="main-wrapper-item" href="https://www.google.com/chrome/browser/desktop/">
+                          <div class="img-wrapp"><img src="img/zagl/Chrome.png" alt=""></div></a><a class="main-wrapper-item" href="http://www.mozilla.org/firefox/new/">
+                          <div class="img-wrapp"><img src="img/zagl/FF.png" alt=""></div></a><a class="main-wrapper-item" href="http://windows.microsoft.com/ie">
+                          <div class="img-wrapp"><img src="img/zagl/IE.png" alt=""></div></a><a class="main-wrapper-item" href="http://www.apple.com/osx/">
+                          <div class="img-wrapp"><img src="img/zagl/Opera.png" alt=""></div></a><a class="main-wrapper-item" href="http://www.opera.com/ru">
+                          <div class="img-wrapp"><img src="img/zagl/Safari.png" alt=""></div></a>
           </div>
         </div>
       </div>
@@ -95,31 +71,23 @@
         <div class="footer-right">
           <div class="tel-wrap">
             <div class="tel-item main">
-              <div class="text-sm">Регистратура</div>
-              <a class="tel-item-tel" href="tel:84959561767">8 (495) 956-17-67</a>
+              <div class="text-sm">Регистратура</div><a class="tel-item-tel" href="tel:84959561767">8 (495) 956-17-67</a>
             </div>
             <div class="tel-item">
-              <div class="text-sm">Стоматология</div>
-              <a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a>
+              <div class="text-sm">Стоматология</div><a class="tel-item-tel" href="tel:84959566095">8 (495) 956-60-95</a>
             </div>
           </div>
-          <div class="time-blk">
-            <span>Пн–Сб: 8:30–21:00</span>
-            <span>Вс: 9:00–20:00</span>
-          </div>
+          <div class="time-blk"><span>Пн–Сб: 8:30–21:00</span><span>Вс: 9:00–20:00</span></div>
         </div>
         <div class="footer-footer-inner">
           <div class="footer-footer-desc">
             <div class="text-light">© 2003–2017 ОАО «Моситалмед»</div>
           </div>
-          <div class="footer-footer-dev">
-            <a class="dev-link" href="#">
+          <div class="footer-footer-dev"><a class="dev-link" href="#">
               <div class="text-light">Разработка сайта: </div>
               <div class="dev-link-logo"><svg xmlns="http://www.w3.org/2000/svg" width="22.5px" height="22.5px" viewBox="0 0 55.4 54.7"><path d="M55.3 51.2V3.9c-.2-.8.3-6.4-4.8-2.7-5 3.3-18.6 12.4-18.6 12.4s-3.5 3.3-8.5 0C16.8 9.3 4.5 1.2 4.5 1.2S.2-2.3 0 3.6v48s0 4.1 3.7 2.8C5.4 53.3 7.3 52 8.9 51c2.6-2.2 2.6-5.5 2.6-5.5v-5.4c0-6 4-1.8 4-1.8s5.4 3.6 7.8 5.3c4.8 2.5 8 .2 8 .2s6.9-4.6 9.5-6.4c3.2-2.5 3 2.6 3 2.6v3.8s-.4 3.9 2.6 6.5c1.5 1.2 3.3 2.6 4.9 3.9 4.8 2.1 4-3 4-3zM41.2 26l-10.5 7s-3 1.9-6.5 0c-3.2-2.2-10.8-7.2-10.8-7.2s-2-.6-2-3.6v-2.6s-.2-3.9 2.8-1.5l9.9 6.6c3.1 2.4 6.7 0 6.7 0s6.8-4.6 11.1-7.5c1.9-1.4 1.6 1.1 1.6 1.1v3.2c0 .2.4 2.6-2.3 4.5z" class="flex"/></svg>
                 <div class="text bold">FLEX.MEDIA</div>
-              </div>
-            </a>
-          </div>
+              </div></a></div>
         </div>
       </div>
     </div>
