add ol-list, style with counter

--- a/bitrix/templates/main/1-1otdel.html
+++ b/bitrix/templates/main/1-1otdel.html
@@ -861,6 +861,13 @@
                                   <li>Доходные дома: ул. Старый Арбат, 28 (1903г.), ул. Пушечная, 4 (1902г.), Ул. Пречистенка, 39 (1905г.), ул. Мамонтова, 14 (1911г.)</li>
                                   <li>Особняки: ул. Садово-Спасская, 2 (1898), Мерзляковский пер., 20 (1902г.)</li>
                                 </ul>
+                                <ol>
+                                  <li>Лечиться у нас - эффективное восстановление утраченного здоровья.</li>
+                                  <li>В отделении успешно проводится лечение синдрома хронической усталости.</li>
+                                  <li>Применение физиотерапевтических методик.</li>
+                                  <li>Эффективное восстановление утраченного здоровья.</li>
+                                  <li>В отделении успешно проводится лечение.</li>
+                                </ol>
                               </div>
                             </div>
                           </div>
