--- a/bitrix/templates/main/3-1vrach.html
+++ b/bitrix/templates/main/3-1vrach.html
@@ -814,6 +814,13 @@
                         <h3>Дополнительная информация</h3>
                         <p>В отделении успешно проводится лечение весьма распространённого в наши дни синдрома хронической усталости. Применение физиотерапевтических методик существенно расширяет диапозон лечебных возможностей и сокращает сроки лечения. Лечиться у нас - эффективное восстановление утраченного здоровья. отделении успешно проводится лечение весьма распространённого в наши дни синдрома хронической усталости.</p>
                         <p>Применение физиотерапевтических методик существенно расширяет диапозон лечебных возможностей и сокращает сроки лечения. Лечиться у нас - эффективное восстановление утраченного здоровья.</p>
+                        <ol>
+                          <li>Лечиться у нас - эффективное восстановление утраченного здоровья.</li>
+                          <li>В отделении успешно проводится лечение синдрома хронической усталости.</li>
+                          <li>Применение физиотерапевтических методик.</li>
+                          <li>Эффективное восстановление утраченного здоровья.</li>
+                          <li>В отделении успешно проводится лечение.</li>
+                        </ol>
                         <div class="content-slider">
                           <div class="content-slider-inner js-contentslider">
                             <div class="content-slider-item"><img data-lazy="img/slideradd/1.jpg" alt=""></div>
