--- a/src/pug/3-1vrach.pug
+++ b/src/pug/3-1vrach.pug
@@ -449,6 +449,12 @@ block content
 							h3 Дополнительная информация
 							p В отделении успешно проводится лечение весьма распространённого в наши дни синдрома хронической усталости. Применение физиотерапевтических методик существенно расширяет диапозон лечебных возможностей и сокращает сроки лечения. Лечиться у нас - эффективное восстановление утраченного здоровья. отделении успешно проводится лечение весьма распространённого в наши дни синдрома хронической усталости.
 							p Применение физиотерапевтических методик существенно расширяет диапозон лечебных возможностей и сокращает сроки лечения. Лечиться у нас - эффективное восстановление утраченного здоровья.
+							ol
+								li Лечиться у нас - эффективное восстановление утраченного здоровья.
+								li В отделении успешно проводится лечение синдрома хронической усталости.
+								li Применение физиотерапевтических методик.
+								li Эффективное восстановление утраченного здоровья.
+								li В отделении успешно проводится лечение.
 							.content-slider
 								.content-slider-inner.js-contentslider
 									.content-slider-item
