--- a/src/sass/lib/_root.scss
+++ b/src/sass/lib/_root.scss
@@ -12,6 +12,7 @@ $colors: (
   textlight: #7d7d7d,
   headertop: #656565,
   textgray: #8b8b8b,
+  textlist: #5a5a5a,
   bggray: #f8fcfa,
   bcolor: #c3c3c3,
   hborder: #e6e6e6,
