--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -52,7 +52,6 @@ table {
 .slick-slider {
   position: relative;
   display: block;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -133,6 +132,7 @@ table {
   --color-textlight: #7d7d7d;
   --color-headertop: #656565;
   --color-textgray: #8b8b8b;
+  --color-textlist: #5a5a5a;
   --color-bggray: #f8fcfa;
   --color-bcolor: #c3c3c3;
   --color-hborder: #e6e6e6;
@@ -156,7 +156,6 @@ input[type="password"] {
   line-height: 1.65; }
 
 input {
-  -webkit-box-shadow: none;
   box-shadow: none;
   font-family: "Open Sans";
   color: #000;
@@ -191,7 +190,6 @@ a {
   transition: color .3s; }
 
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent; }
   *::-webkit-input-placeholder {
@@ -958,8 +956,6 @@ body, .out {
           left: 0;
           right: 0;
           height: 2px;
-          background-image: -webkit-gradient(linear, left top, right top, from(#323232), color-stop(30%, rgba(255, 255, 255, 0)));
-          background-image: -webkit-gradient(linear, left top, right top, from(var(--color-textblk)), color-stop(30%, rgba(255, 255, 255, 0)));
           background-image: -webkit-linear-gradient(left, #323232, rgba(255, 255, 255, 0) 30%);
           background-image: -webkit-linear-gradient(left, var(--color-textblk), rgba(255, 255, 255, 0) 30%);
           background-image: linear-gradient(90deg, #323232, rgba(255, 255, 255, 0) 30%);
@@ -1065,7 +1061,6 @@ body, .out {
 .dropdown-inner {
   background-color: #fff;
   background-color: var(--color-white);
-  -webkit-box-shadow: 0px 5px 22px 0px rgba(68, 97, 119, 0.12);
   box-shadow: 0px 5px 22px 0px rgba(68, 97, 119, 0.12); }
   .dropdown-inner:not(.spec) {
     padding: 2.3125rem 2.0625rem; }
@@ -1134,7 +1129,6 @@ body, .out {
     width: 100%;
     height: 100%;
     z-index: -1;
-    -webkit-box-shadow: 0px 12px 55px 0px rgba(133, 177, 166, 0.07);
     box-shadow: 0px 12px 55px 0px rgba(133, 177, 166, 0.07);
     -webkit-transition: opacity 0.3s;
     transition: opacity 0.3s;
@@ -1596,7 +1590,6 @@ body, .out {
       background-color: #fff;
       background-color: var(--color-white);
       z-index: -1;
-      -webkit-box-shadow: 0px 10px 20px 0px rgba(133, 177, 166, 0.07);
       box-shadow: 0px 10px 20px 0px rgba(133, 177, 166, 0.07);
       opacity: 0;
       -webkit-transition: opacity .15s, max-height .15s;
@@ -1666,8 +1659,6 @@ body, .out {
     .index-slider-item:before {
       width: 40%;
       left: 0;
-      background: -webkit-gradient(linear, left top, right top, from(#f8fcfa), color-stop(50%, #f8fcfa), color-stop(65%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
-      background: -webkit-gradient(linear, left top, right top, from(var(--color-bggray)), color-stop(50%, var(--color-bggray)), color-stop(65%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
       background: -webkit-linear-gradient(left, #f8fcfa 0%, #f8fcfa 50%, rgba(255, 255, 255, 0.8) 65%, rgba(255, 255, 255, 0) 100%);
       background: -webkit-linear-gradient(left, var(--color-bggray) 0%, var(--color-bggray) 50%, rgba(255, 255, 255, 0.8) 65%, rgba(255, 255, 255, 0) 100%);
       background: linear-gradient(to right, #f8fcfa 0%, #f8fcfa 50%, rgba(255, 255, 255, 0.8) 65%, rgba(255, 255, 255, 0) 100%);
@@ -1675,8 +1666,6 @@ body, .out {
     .index-slider-item:after {
       width: 25%;
       right: 0;
-      background: -webkit-gradient(linear, right top, left top, from(#f8fcfa), color-stop(15%, #f8fcfa), color-stop(30%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
-      background: -webkit-gradient(linear, right top, left top, from(var(--color-bggray)), color-stop(15%, var(--color-bggray)), color-stop(30%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
       background: -webkit-linear-gradient(right, #f8fcfa 0%, #f8fcfa 15%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
       background: -webkit-linear-gradient(right, var(--color-bggray) 0%, var(--color-bggray) 15%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
       background: linear-gradient(to left, #f8fcfa 0%, #f8fcfa 15%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
@@ -1767,12 +1756,9 @@ body, .out {
         background-color: #fff;
         background-color: var(--color-white);
         padding-left: 0.0625rem;
-        -webkit-box-shadow: 0px 5px 22px 0px rgba(133, 177, 166, 0.12);
         box-shadow: 0px 5px 22px 0px rgba(133, 177, 166, 0.12);
-        -webkit-transition: background-color .25s, -webkit-box-shadow .25s;
-        transition: background-color .25s, -webkit-box-shadow .25s;
-        transition: box-shadow .25s, background-color .25s;
-        transition: box-shadow .25s, background-color .25s, -webkit-box-shadow .25s; }
+        -webkit-transition: box-shadow .25s, background-color .25s;
+        transition: box-shadow .25s, background-color .25s; }
         .arr-wrap-inner .slick-arrow .icon:before {
           content: "";
           display: inline-block;
@@ -1788,7 +1774,6 @@ body, .out {
           stroke: #323232;
           stroke: var(--color-textblk); }
       .arr-wrap-inner .slick-arrow:hover .icon {
-        -webkit-box-shadow: 0px 5px 12px 0px rgba(133, 177, 166, 0.15);
         box-shadow: 0px 5px 12px 0px rgba(133, 177, 166, 0.15); }
       .arr-wrap-inner .slick-arrow:active svg {
         stroke: #d56c72;
@@ -1889,7 +1874,6 @@ body, .out {
         .otdel-head-title .arr-wrap-inner .slick-arrow, .otdel-head-title .title .slick-arrow {
           width: 2.1875rem; }
           .otdel-head-title .arr-wrap-inner .slick-arrow .icon, .otdel-head-title .title .slick-arrow .icon {
-            -webkit-box-shadow: none;
             box-shadow: none;
             background: 0 0; }
       .otdel-head-title .arr-wrap-inner {
@@ -1933,7 +1917,6 @@ body, .out {
     height: 100%;
     z-index: -1;
     opacity: 0;
-    -webkit-box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.2);
     box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.2);
     -webkit-transition: opacity 0.3s;
     transition: opacity 0.3s; }
@@ -2113,7 +2096,6 @@ body, .out {
     width: 7px;
     border-radius: 10px; }
   .suggest-list *::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 35px 35px #d56c72;
     box-shadow: inset 0 0 35px 35px #d56c72;
     border-radius: 10px;
     overflow: hidden; }
@@ -2147,7 +2129,6 @@ body, .out {
   .suggest-wrapper .search-submit {
     right: 0.625rem; }
   .suggest-wrapper.focus .suggest-wrapper-inner {
-    -webkit-box-shadow: 0px 5px 22px 0px rgba(68, 97, 119, 0.12);
     box-shadow: 0px 5px 22px 0px rgba(68, 97, 119, 0.12);
     border-color: #e6e6e6;
     border-color: var(--color-hborder);
@@ -2160,10 +2141,8 @@ body, .out {
     padding: 0.625rem;
     border-radius: 1.875rem;
     border: 1px solid transparent;
-    -webkit-transition: border-color .3s, background-color .3s, -webkit-box-shadow .3s;
-    transition: border-color .3s, background-color .3s, -webkit-box-shadow .3s;
+    -webkit-transition: box-shadow .3s, border-color .3s, background-color .3s;
     transition: box-shadow .3s, border-color .3s, background-color .3s;
-    transition: box-shadow .3s, border-color .3s, background-color .3s, -webkit-box-shadow .3s;
     position: absolute;
     left: 0;
     right: 0;
@@ -2234,7 +2213,6 @@ body, .out {
       left: 2.5rem;
       bottom: 2.5rem;
       background-color: rgba(248, 250, 252, 0.851);
-      -webkit-box-shadow: 0px 5px 22px 0px rgba(210, 121, 126, 0.12);
       box-shadow: 0px 5px 22px 0px rgba(210, 121, 126, 0.12);
       padding: 1.25rem 2.1875rem 3.125rem 1.25rem;
       max-width: 18.75rem; }
@@ -2322,7 +2300,6 @@ body, .out {
 
 .about-img {
   width: 100%;
-  -webkit-box-shadow: 0 12px 55px 0 rgba(133, 177, 166, 0.15);
   box-shadow: 0 12px 55px 0 rgba(133, 177, 166, 0.15); }
 
 .about-item {
@@ -2379,7 +2356,6 @@ body, .out {
       z-index: 0; }
       .news-item-content-inner:before {
         content: '';
-        -webkit-box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.15);
         box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.15);
         position: absolute;
         top: 0;
@@ -2447,7 +2423,6 @@ body, .out {
       width: 100%;
       height: 100%;
       z-index: -1;
-      -webkit-box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.1);
       box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.1);
       -webkit-transition: opacity 0.3s;
       transition: opacity 0.3s;
@@ -2523,8 +2498,6 @@ body, .out {
   .page-head-bg:before {
     width: 40%;
     left: 0;
-    background: -webkit-gradient(linear, left top, right top, from(#f8fcfa), color-stop(50%, #f8fcfa), color-stop(65%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
-    background: -webkit-gradient(linear, left top, right top, from(var(--color-bggray)), color-stop(50%, var(--color-bggray)), color-stop(65%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
     background: -webkit-linear-gradient(left, #f8fcfa 0%, #f8fcfa 50%, rgba(255, 255, 255, 0.8) 65%, rgba(255, 255, 255, 0) 100%);
     background: -webkit-linear-gradient(left, var(--color-bggray) 0%, var(--color-bggray) 50%, rgba(255, 255, 255, 0.8) 65%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(to right, #f8fcfa 0%, #f8fcfa 50%, rgba(255, 255, 255, 0.8) 65%, rgba(255, 255, 255, 0) 100%);
@@ -2532,8 +2505,6 @@ body, .out {
   .page-head-bg:after {
     width: 25%;
     right: 0;
-    background: -webkit-gradient(linear, right top, left top, from(#f8fcfa), color-stop(15%, #f8fcfa), color-stop(30%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
-    background: -webkit-gradient(linear, right top, left top, from(var(--color-bggray)), color-stop(15%, var(--color-bggray)), color-stop(30%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
     background: -webkit-linear-gradient(right, #f8fcfa 0%, #f8fcfa 15%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
     background: -webkit-linear-gradient(right, var(--color-bggray) 0%, var(--color-bggray) 15%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(to left, #f8fcfa 0%, #f8fcfa 15%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
@@ -2810,8 +2781,6 @@ body, .out {
               left: 0;
               right: 0;
               bottom: -3px;
-              background-image: -webkit-gradient(linear, left top, right top, from(#323232), color-stop(30%, rgba(255, 255, 255, 0)));
-              background-image: -webkit-gradient(linear, left top, right top, from(var(--color-textblk)), color-stop(30%, rgba(255, 255, 255, 0)));
               background-image: -webkit-linear-gradient(left, #323232, rgba(255, 255, 255, 0) 30%);
               background-image: -webkit-linear-gradient(left, var(--color-textblk), rgba(255, 255, 255, 0) 30%);
               background-image: linear-gradient(90deg, #323232, rgba(255, 255, 255, 0) 30%);
@@ -2889,7 +2858,6 @@ body, .out {
       width: 100%;
       height: 100%;
       z-index: -1;
-      -webkit-box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.2);
       box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.2);
       opacity: 0;
       -webkit-transition: opacity 0.3s;
@@ -3137,7 +3105,6 @@ body, .out {
       height: 1.5625rem; }
       .diplom-slider-content .arr-wrap .arr-wrap-inner .slick-arrow .icon {
         background: 0 0 !important;
-        -webkit-box-shadow: none !important;
         box-shadow: none !important; }
     .diplom-slider-content .arr-wrap .arr-wrap-inner .slider-counter {
       padding-left: 0.3125rem;
@@ -3192,8 +3159,6 @@ body, .out {
     .content-wrapper p a {
       color: #d56c72;
       color: var(--color-secondary);
-      -webkit-box-shadow: 0 -2px 0 0 transparent, 0 1px 0 0 #d56c72;
-      -webkit-box-shadow: 0 -2px 0 0 transparent, 0 1px 0 0 var(--color-secondary);
       box-shadow: 0 -2px 0 0 transparent, 0 1px 0 0 #d56c72;
       box-shadow: 0 -2px 0 0 transparent, 0 1px 0 0 var(--color-secondary); }
       .content-wrapper p a:hover {
@@ -3251,6 +3216,29 @@ body, .out {
         position: absolute;
         left: 0;
         top: 0.5rem; }
+  .content-wrapper ol {
+    font-size: 0.875rem;
+    line-height: 1.75;
+    color: #5a5a5a;
+    color: var(--color-textlist);
+    margin: 2.5rem 0;
+    counter-reset: li-item; }
+    .content-wrapper ol:first-child {
+      margin-top: 0; }
+    .content-wrapper ol li {
+      position: relative;
+      margin: 1.25rem 0;
+      padding-left: 1.5625rem; }
+      .content-wrapper ol li:after {
+        content: counter(li-item) ".";
+        counter-increment: li-item;
+        display: inline-block;
+        position: absolute;
+        color: #5a5a5a;
+        color: var(--color-textlist);
+        left: 0;
+        top: 0;
+        font-weight: 600; }
   .content-wrapper .about-about-items {
     padding-top: 0 !important; }
     .content-wrapper .about-about-items .about-item {
@@ -3376,7 +3364,6 @@ hr {
     display: block; }
 
 .offer-wrapper {
-  -webkit-box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.2);
   box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.2);
   background-color: #fff;
   background-color: var(--color-white); }
@@ -3391,7 +3378,6 @@ hr {
       border-radius: 4px;
       background-color: transparent; }
     .offer-wrapper-content::-webkit-scrollbar-thumb {
-      -webkit-box-shadow: inset 0 0 35px 35px #dcdcdc;
       box-shadow: inset 0 0 35px 35px #dcdcdc;
       border-radius: 10px;
       overflow: hidden; }
@@ -3549,7 +3535,6 @@ a.text:active {
     transition-delay: 0.3s;
     padding: 2.125rem 2.6875rem;
     margin: 1.5625rem 0;
-    -webkit-box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.2);
     box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.2); }
     .modal-layout .modal-container.response .modal-container-content > .text {
       margin-bottom: 2.8125rem;
@@ -3789,12 +3774,9 @@ a.text:active {
     width: 4px;
     background-color: transparent; }
   .select-check div::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 35px 35px #d56c72;
-    -webkit-box-shadow: inset 0 0 35px 35px var(--color-secondary);
     box-shadow: inset 0 0 35px 35px #d56c72;
     box-shadow: inset 0 0 35px 35px var(--color-secondary); }
   .select-check .dropdown-inner {
-    -webkit-box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.2);
     box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.2);
     padding-top: 1.25rem;
     padding-bottom: 0.625rem; }
@@ -4210,7 +4192,6 @@ a.text:active {
   padding: 0 !important;
   background: 0 0 !important;
   max-width: 61.125rem;
-  -webkit-box-shadow: none;
   box-shadow: none; }
   .special .modal-container .small-link {
     top: -0.9375rem; }
@@ -4223,7 +4204,6 @@ a.text:active {
     z-index: 10%;
     max-width: 43rem;
     margin-left: auto;
-    -webkit-box-shadow: 0 5px 11px 0 rgba(68, 97, 119, 0.2);
     box-shadow: 0 5px 11px 0 rgba(68, 97, 119, 0.2); }
   .special .modal-container-arrows {
     width: 11.25rem;
@@ -4390,7 +4370,6 @@ a.text:active {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    -webkit-box-shadow: 0 6px 27px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 6px 27px 0 rgba(0, 0, 0, 0.15); }
 
 .map-cont {
@@ -4494,7 +4473,6 @@ a.text:active {
   color: #d56c72;
   color: var(--color-secondary); }
         .col-wrapper .col-50 .vrach-vrach-name a, .col-wrapper .col-33 .vrach-vrach-name a {
-          -webkit-box-shadow: none;
           box-shadow: none;
           cursor: pointer; }
     .col-wrapper .col-50 .vrach-vrach-inner:after {
@@ -4505,8 +4483,6 @@ a.text:active {
   right: 0;
   display: inline-block;
   bottom: 0;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#fcf6f5), color-stop(50%, rgba(255, 255, 255, 0)));
-  background-image: -webkit-gradient(linear, left bottom, left top, from(var(--color-secondarybg)), color-stop(50%, rgba(255, 255, 255, 0)));
   background-image: -webkit-linear-gradient(bottom, #fcf6f5, rgba(255, 255, 255, 0) 50%);
   background-image: -webkit-linear-gradient(bottom, var(--color-secondarybg), rgba(255, 255, 255, 0) 50%);
   background-image: linear-gradient(to top, #fcf6f5, rgba(255, 255, 255, 0) 50%);
@@ -4519,8 +4495,6 @@ a.text:active {
   right: 0;
   display: inline-block;
   bottom: 0;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#fcf6f5), color-stop(50%, rgba(255, 255, 255, 0)));
-  background-image: -webkit-gradient(linear, left bottom, left top, from(var(--color-secondarybg)), color-stop(50%, rgba(255, 255, 255, 0)));
   background-image: -webkit-linear-gradient(bottom, #fcf6f5, rgba(255, 255, 255, 0) 50%);
   background-image: -webkit-linear-gradient(bottom, var(--color-secondarybg), rgba(255, 255, 255, 0) 50%);
   background-image: linear-gradient(to top, #fcf6f5, rgba(255, 255, 255, 0) 50%);
@@ -4559,7 +4533,6 @@ a.text:active {
       font-size: 0;
       padding-bottom: 3.125rem;
       display: inline-block;
-      -webkit-box-shadow: none;
       box-shadow: none; }
       .partner-block-inner .title {
         -webkit-transition: color 0.3s;
@@ -4805,8 +4778,6 @@ a.text:active {
     .search-result-item-content b {
       color: #d56c72;
       color: var(--color-secondary);
-      -webkit-box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 #d56c72;
-      -webkit-box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 var(--color-secondary);
       box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 #d56c72;
       box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 var(--color-secondary); }
 
@@ -5843,8 +5814,6 @@ a.text:active {
   .index-slider-item:before {
     width: 100%;
     right: 0;
-    background: -webkit-gradient(linear, left top, left bottom, from(#f8fcfa), color-stop(30%, #f8fcfa), to(rgba(255, 255, 255, 0)));
-    background: -webkit-gradient(linear, left top, left bottom, from(var(--color-bggray)), color-stop(30%, var(--color-bggray)), to(rgba(255, 255, 255, 0)));
     background: -webkit-linear-gradient(top, #f8fcfa 0%, #f8fcfa 30%, rgba(255, 255, 255, 0) 100%);
     background: -webkit-linear-gradient(top, var(--color-bggray) 0%, var(--color-bggray) 30%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(to bottom, #f8fcfa 0%, #f8fcfa 30%, rgba(255, 255, 255, 0) 100%);
