--- a/src/pug/1-1otdel.pug
+++ b/src/pug/1-1otdel.pug
@@ -559,6 +559,13 @@ block content
 												li Сооружение павильона гигиенической выставки в Санкт-Петербурге (1919г.)
 												li Доходные дома: ул. Старый Арбат, 28 (1903г.), ул. Пушечная, 4 (1902г.), Ул. Пречистенка, 39 (1905г.), ул. Мамонтова, 14 (1911г.)
 												li Особняки: ул. Садово-Спасская, 2 (1898), Мерзляковский пер., 20 (1902г.)
+
+											ol
+												li Лечиться у нас - эффективное восстановление утраченного здоровья.
+												li В отделении успешно проводится лечение синдрома хронической усталости.
+												li Применение физиотерапевтических методик.
+												li Эффективное восстановление утраченного здоровья.
+												li В отделении успешно проводится лечение.
 							.link-dotted.js-showmore(data-alt-text='Свернуть описание') Подробнее об отделении
 	.wrapper
 		.box
